--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "@types/uuid": "^10.0.0",
     "ant-design-vue": "^4.2.3",
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.21",
+    "uuid": "^10.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.4.3",
     "vuex": "^4.1.0"
