--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/uuid": "^10.0.0",
     "ant-design-vue": "^4.2.3",
+    "axios": "^1.7.7",
     "core-js": "^3.6.5",
     "lodash-es": "^4.17.21",
     "uuid": "^10.0.0",
@@ -29,6 +30,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "jest": "^29.7.0",
     "typescript": "~4.3.5"
   }
 }
